update personal info April 2023

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="info-content">
           <h1 class="name" title="Shutong Wu">Shutong Wu</h1>
-          <p class="title">Master student</p>
+          <p class="title">hasta ver la luz</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -222,11 +222,13 @@
 
         <section class="about-text">
           <p>
-            I am currently a master student at Institute of Image Processing and Pattern
-            Recognition, Shanghai Jiao Tong University, advised by Prof. Xiaolin Huang. In
-            2020, I got my degree of B.Eng at Department of Automation, Tsinghua University, advised by Prof.
-            Danya Yao. From June 2022, I started my internship advised by Prof. Chaowei Xiao from Arizona State
+            I am an incoming Ph.D student of Prof. Chaowei Xiao's group at Arizona State
             University.
+            I got my degree of M.Eng in March 2023 at Institute of Image Processing and Pattern
+            Recognition, Shanghai Jiao Tong University, advised by Prof. Xiaolin Huang and B.Eng in June 2020 at Department of Automation, Tsinghua University, advised by Prof.
+            Danya Yao. 
+            <!-- From June 2022, I started my internship advised by Prof. Chaowei Xiao from Arizona State -->
+            <!-- University. -->
           </p>
 
           <p>
