update personal info, May 12

--- a/index.html
+++ b/index.html
@@ -222,17 +222,16 @@
 
         <section class="about-text">
           <p>
-            I am an incoming Ph.D student of Prof. Chaowei Xiao's group at Arizona State
-            University.
-            I got my degree of M.Eng in March 2023 at Institute of Image Processing and Pattern
-            Recognition, Shanghai Jiao Tong University, advised by Prof. Xiaolin Huang and B.Eng in June 2020 at Department of Automation, Tsinghua University, advised by Prof.
+            I am an incoming Ph.D student of Prof. Chaowei Xiao's group.
+            In March 2023, I got my degree of M.Eng at Institute of Image Processing and Pattern
+            Recognition, Shanghai Jiao Tong University, advised by Prof. Jie Yang and Prof. Xiaolin Huang. In June 2020, I got my degree of B.Eng  at Department of Automation, Tsinghua University, advised by Prof.
             Danya Yao. 
             <!-- From June 2022, I started my internship advised by Prof. Chaowei Xiao from Arizona State -->
             <!-- University. -->
           </p>
 
           <p>
-            My research interests include machine learning security, vision-language models, and weakly-supervised learning.
+            My research interests include representation learning and trustworthy machine learning.
             My goal is to contribute to more trustworthy and generalizable AI systems in the future.
           </p>
 
@@ -779,14 +778,14 @@
             <li class="publication-post-item">
               <a href="#">
 
-                <figure class="publication-banner-box">
+                <!-- <figure class="publication-banner-box">
                   <img src="./assets/images/blog-3.jpg" alt="Design digest #80" loading="lazy">
-                </figure>
+                </figure> -->
 
                 <div class="publication-content">
 
                   <div class="publication-meta">
-                    <p class="publication-category">Machine Learning (under revision)</p>
+                    <p class="publication-category">Machine Learning (accepted, in press)</p>
 
                     <span class="dot"></span>
 
