update contact info

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:wust20@sjtu.edu.cn" class="contact-link">wust20@sjtu.edu.cn</a>
+              <a href="mailto:@sjtu.edu.cn" class="contact-link">wust20@sjtu.edu.cn</a>
+              <!-- <a href="mailto:@sjtu.edu.cn" class="contact-link">shutong.wu@wisc.edu</a> -->
             </div>
 
           </li>
