update contact info

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:@sjtu.edu.cn" class="contact-link">wust20@sjtu.edu.cn</a>
-              <!-- <a href="mailto:@sjtu.edu.cn" class="contact-link">shutong.wu@wisc.edu</a> -->
+              <!-- <a href="mailto:@sjtu.edu.cn" class="contact-link">wust20@sjtu.edu.cn</a> -->
+              <a href="mailto:shutong.wu@wisc.edu" class="contact-link">shutong.wu@wisc.edu</a>
             </div>
 
           </li>
 
-          <li class="contact-item">
+          <!-- <li class="contact-item">
 
             <div class="icon-box">
               <ion-icon name="phone-portrait-outline"></ion-icon>
@@ -99,7 +99,7 @@
               <a href="tel:+8617611570712" class="contact-link">+86 176-1157-0712</a>
             </div>
 
-          </li>
+          </li> -->
 
           <li class="contact-item">
 
