--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <figure class="avatar-box">
           <!-- <img src="./assets/images/avatar/avatar-cycho.jpg" alt="Shutong Wu" width="80"> -->
-          <img src="./assets/images/avatar/avatar-cycho.jpg" alt="Shutong Wu" width="80">
+          <img src="./assets/images/avatar/avatar-shutong.jpg" alt="Shutong Wu" width="80">
         </figure>
 
         <div class="info-content">
@@ -80,9 +80,8 @@
 
             <div class="contact-info">
               <p class="contact-title">Email</p>
-
-              <!-- <a href="mailto:@sjtu.edu.cn" class="contact-link">wust20@sjtu.edu.cn</a> -->
-              <a href="mailto:shutong.wu@wisc.edu" class="contact-link">shutong.wu@wisc.edu</a>
+              <!-- <a href="mailto:shutong.wu@wisc.edu" class="contact-link">shutong.wu@wisc.edu</a> -->
+              <a href="mailto:wust23@cs.wisc.edu" class="contact-link">wust23@cs.wisc.edu</a>
             </div>
 
           </li>
@@ -223,7 +222,8 @@
 
         <section class="about-text">
           <p>
-            I am an incoming Ph.D student of Prof. Chaowei Xiao's group.
+            <!-- I am an incoming Ph.D student of Prof. Chaowei Xiao's group. -->
+            I am an incoming Ph.D student at University of Wisconsin-Madison, advised by Prof. Chaowei Xiao.
             In March 2023, I got my degree of M.Eng at Institute of Image Processing and Pattern
             Recognition, Shanghai Jiao Tong University, advised by Prof. Jie Yang and Prof. Xiaolin Huang. In June 2020, I got my degree of B.Eng  at Department of Automation, Tsinghua University, advised by Prof.
             Danya Yao. 
