--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/avatar/avatar-cycho.jpg" type="image/x-icon">
+  <!-- <link rel="shortcut icon" href="./assets/images/avatar/avatar-shutong.jpg" type="image/x-icon"> -->
+  <link rel="shortcut icon" href="./assets/images/notused/icon-dev.svg" type="image/x-icon">
 
   <!--
     - custom css link
@@ -223,9 +224,9 @@
         <section class="about-text">
           <p>
             <!-- I am an incoming Ph.D student of Prof. Chaowei Xiao's group. -->
-            I am an incoming Ph.D student at University of Wisconsin-Madison, advised by Prof. Chaowei Xiao.
+            I am an incoming Ph.D student at the University of Wisconsin-Madison, advised by Prof. Chaowei Xiao.
             In March 2023, I got my degree of M.Eng at Institute of Image Processing and Pattern
-            Recognition, Shanghai Jiao Tong University, advised by Prof. Jie Yang and Prof. Xiaolin Huang. In June 2020, I got my degree of B.Eng  at Department of Automation, Tsinghua University, advised by Prof.
+            Recognition, Shanghai Jiao Tong University, advised by Prof. Jie Yang and Prof. Xiaolin Huang. In June 2020, I got my degree of B.Eng at Department of Automation, Tsinghua University, advised by Prof.
             Danya Yao. 
             <!-- From June 2022, I started my internship advised by Prof. Chaowei Xiao from Arizona State -->
             <!-- University. -->
