--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     - favicon
   -->
   <!-- <link rel="shortcut icon" href="./assets/images/avatar/avatar-shutong.jpg" type="image/x-icon"> -->
-  <link rel="shortcut icon" href="./assets/images/notused/icon-dev.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/icon-dev.svg" type="image/x-icon">
 
   <!--
     - custom css link
