fix an display issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     - favicon
   -->
   <!-- <link rel="shortcut icon" href="./assets/images/avatar/avatar-shutong.jpg" type="image/x-icon"> -->
-  <link rel="shortcut icon" href="./assets/images/icon-dev.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/icon.svg" type="image/x-icon">
 
   <!--
     - custom css link
@@ -109,7 +109,7 @@
           <p class="contact-title">Links: </p>
 
           <li class="social-item">
-            <a href="" class="social-link" title="google scholar">
+            <a href="" class="social-link" title="google scholar" >
               <ion-icon name="school-outline"></ion-icon>
             </a>
           </li>
@@ -187,7 +187,7 @@
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
+      <article class="about active" data-page="about">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -401,7 +401,7 @@
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+        <!-- <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -439,7 +439,7 @@
 
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
@@ -572,57 +572,7 @@
 
         </section>
 
-        <!-- <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="briefcase-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Research Intern</h4>
-
-              <span>June 2022 — Present</span>
-
-              <p class="timeline-text">
-                Arizona State University, AZ, US; advised by Prof. Chaowei Xiao
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Research Intern</h4>
-
-              <span>January 2021 — June 2022</span>
-
-              <p class="timeline-text">
-                2012 Lab, Huawei Technologies Co., Ltd, Shanghai, China
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Data Analyst Intern</h4>
-
-              <span>May 2019 — August 2019</span>
-
-              <p class="timeline-text">
-                Beijing Kwai Technology Co., Ltd, Beijing, China
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section> -->
+       
 
         <!-- <section class="skill">
 
@@ -704,7 +654,7 @@
           <ul class="publication-posts-list">
             
             <li class="publication-post-item">
-              <a href="https://link.springer.com/article/10.1007/s10994-023-06356-3">
+              <a href="https://link.springer.com/article/10.1007/s10994-023-06356-3" target="_blank" rel="noopener noreferrer">
 
                 <!-- <figure class="publication-banner-box">
                   <img src="./assets/images/blog-3.jpg" alt="Design digest #80" loading="lazy">
@@ -733,7 +683,7 @@
             </li>
 
             <li class="publication-post-item">
-              <a href="https://arxiv.org/abs/2303.01507">
+              <a href="https://arxiv.org/abs/2303.01507" target="_blank" rel="noopener noreferrer">
 
                 <figure class="publication-banner-box">
                   <img src="./assets/images/publication/audiopure.png" alt="Best fonts every designer" loading="lazy">
@@ -762,7 +712,7 @@
             </li>
 
             <li class="publication-post-item">
-              <a href="https://arxiv.org/abs/2205.12141" target="_blank">
+              <a href="https://arxiv.org/abs/2205.12141" target="_blank" rel="noopener noreferrer">
 
                 <figure class="publication-banner-box">
                   <img src="./assets/images/publication/ops.png" alt="Design conferences in 2022" loading="lazy">
