--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <!-- <a href="mailto:shutong.wu@wisc.edu" class="contact-link">shutong.wu@wisc.edu</a> -->
-              <a href="mailto:wust23@cs.wisc.edu" class="contact-link">wust23@cs.wisc.edu</a>
+              <a href="mailto:shutong.wu@wisc.edu" class="contact-link">shutong.wu@wisc.edu</a>
+              <!-- <a href="mailto:wust23@cs.wisc.edu" class="contact-link">wust23@cs.wisc.edu</a> -->
             </div>
 
           </li>
@@ -109,7 +109,7 @@
           <p class="contact-title">Links: </p>
 
           <li class="social-item">
-            <a href="" class="social-link" title="google scholar" >
+            <a href="https://scholar.google.com/citations?user=d_Qk95cAAAAJ" class="social-link" title="google scholar" >
               <ion-icon name="school-outline"></ion-icon>
             </a>
           </li>
@@ -527,7 +527,7 @@
               <span>September 2023 — Now</span>
 
               <p class="timeline-text">
-                Computer Sciences, University of Wisconsin-Madison, Madison, WI
+                Department of Computer Sciences, University of Wisconsin-Madison, Madison, WI
               </p>
 
             </li>
