--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Shutong Wu">Shutong Wu | 吴枢同</h1>
+          <h1 class="name" title="Shutong Wu">Shutong Wu</h1>
           <p class="title">hasta ver la luz</p>
         </div>
 
@@ -195,7 +195,7 @@
 
         <section class="about-text">
           <p>
-            I am Shutong Wu (吴枢同), a first-year Ph.D student at University of Wisconsin-Madison, advised by Prof. Chaowei Xiao.
+            I am Shutong Wu (吴枢同), a first-year Ph.D student at University of Wisconsin-Madison.
             In March 2023, I got my degree of M.Eng. at Institute of Image Processing and Pattern
             Recognition, Shanghai Jiao Tong University, advised by Prof. Jie Yang and Prof. Xiaolin Huang. In June 2020, I got my degree of B.Eng. at Department of Automation, Tsinghua University, advised by Prof.
             Danya Yao. 
