--- a/index.html
+++ b/index.html
@@ -195,15 +195,14 @@
 
         <section class="about-text">
           <p>
-            I am Shutong Wu (吴枢同), a first-year Ph.D student at University of Wisconsin-Madison.
+            I am Shutong Wu (吴枢同), a first-year Ph.D. student at University of Wisconsin-Madison.
             In March 2023, I got my degree of M.Eng. at Institute of Image Processing and Pattern
             Recognition, Shanghai Jiao Tong University, advised by Prof. Jie Yang and Prof. Xiaolin Huang. In June 2020, I got my degree of B.Eng. at Department of Automation, Tsinghua University, advised by Prof.
             Danya Yao. 
           </p>
 
           <p>
-            My research interests include representation learning and trustworthy machine learning.
-            My goal is to contribute to more trustworthy and generalizable AI systems in the future.
+            My research interests lie in the intersections between theoretical analysis and practical applications. At present, specifically, I'm interested in trustworthy machine learning and multimodal models.
           </p>
 
           <p>
