--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           </p>
 
           <p>
-            Sometimes I take pictures using 35mm & 120 films. Film cameras I'm using: Leica M4, Canon New F-1, Hasselblad 500cm, Contax TVS and Canon A-1.
+            Sometimes I love to take pictures using 35mm & 120 films. My film cameras: Leica M4, Canon New F-1, Hasselblad 500cm, Contax TVS, and Canon A-1.
           </p>
           <!-- <p>
 
