--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <!-- <img src="./assets/images/avatar/avatar-cycho.jpg" alt="Shutong Wu" width="80"> -->
-          <!-- <img src="./assets/images/avatar/avatar-shutong.jpg" alt="Shutong Wu" width="80"> -->
-          <img src="./assets/images/avatar/avatar-shutong.jpg" alt="Shutong Wu" width="80">
+          <img src="./assets/images/avatar/avatar.jpeg" alt="Shutong Wu" width="80" class="avatar-img">
         </figure>
 
         <div class="info-content">
@@ -109,7 +107,7 @@
           <p class="contact-title">Links: </p>
 
           <li class="social-item">
-            <a href="https://scholar.google.com/citations?user=d_Qk95cAAAAJ" class="social-link" title="google scholar" >
+            <a href="https://scholar.google.com/citations?user=d_Qk95cAAAAJ" class="social-link" title="google scholar" target="_blank">
               <ion-icon name="school-outline"></ion-icon>
             </a>
           </li>
@@ -206,7 +204,7 @@
           </p>
 
           <p>
-            Sometimes I love to take pictures using 35mm & 120 films. My film cameras: Leica M4, Canon New F-1, Hasselblad 500cm, Contax TVS, and Canon A-1.
+            I enjoy taking pictures with 35mm & 120 films. My film cameras: <strike>Canon A-1</strike>, <strike>Canon New F-1</strike>, <strike>Contax TVS</strike>, <strike>Hasselblad 500cm</strike>, and Leica M4.
           </p>
           <!-- <p>
 
@@ -555,7 +553,7 @@
 
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">High school</h4>
 
@@ -565,7 +563,7 @@
                 Changjun High School, Changsha, China
               </p>
 
-            </li>
+            </li> -->
 
           </ol>
 
