--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="info-content">
           <h1 class="name" title="Shutong Wu">Shutong Wu</h1>
-          <!-- <p class="title">hasta ver la luz</p> -->
+          <p class="title">Ph.D. Student, CS@UW-Madison</p>
         </div>
 
         <!-- <button class="info_more-btn" data-sidebar-btn>
@@ -63,7 +63,7 @@
           <ion-icon name="chevron-down"></ion-icon>
         </button> -->
 
-        <button class="theme-btn" data-theme-btn>
+        <button class="theme-btn" title="dark mode" data-theme-btn>
           <ion-icon name="moon-outline"></ion-icon>
         </button>
 
