optimized for tiny screens

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="main-content">
 
       <!--
-        - #NAVBAR
+        - #s
       -->
 
       <nav class="navbar">
@@ -193,7 +193,7 @@
           </p>
 
           <p>
-            My research interests cover various topics of machine learning, including representation learning, trustworthy machine learning, and the efficiency of multimodal generative models.
+            My research interests cover various topics of machine learning, including data-efficient and parameter-efficient learning, trustworthy machine learning, and multimodal generative models.
           </p>
 
           <p>
